force-app/main/default/objects/Litmos__Configuration__c/Litmos__Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <displayFormat>Config-{00000000}</displayFormat>
        <label>Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>