force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Add_Users_Based_On_Role__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Add_Users_Based_On_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Users Based On Role</label>
    <type>Checkbox</type>
</CustomField>