force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Litmos__API_Base_URL__c</fullName>
    <defaultValue>&quot;https://apidev.litmos.com/v2/&quot;</defaultValue>
    <label>API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>