force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__API_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Litmos__API_End_Point__c</fullName>
    <label>API End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>