force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__API_Key__c.field-meta.xml
<CustomField>
    <fullName>Litmos__API_Key__c</fullName>
    <label>API Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>