force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__App_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Litmos__App_Base_URL__c</fullName>
    <label>App Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>