force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Auto_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Auto_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Provisioning</label>
    <type>Checkbox</type>
</CustomField>