force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__BatchLimitForOverallCompletionResult__c.field-meta.xml
<CustomField>
    <fullName>Litmos__BatchLimitForOverallCompletionResult__c</fullName>
    <defaultValue>&quot;100&quot;</defaultValue>
    <description>The no of records to be picked by OverallCompletionResultUpdationScheduler</description>
    <label>BatchLimitForOverallCompletionResult</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
                <default>true</default>
                <label>100</label>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>