force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Daily_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Daily_Sync_Time__c</fullName>
    <label>Daily Sync Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 AM</fullName>
            </value>
            <value>
                <fullName>01 AM</fullName>
            </value>
            <value>
                <fullName>02 AM</fullName>
            </value>
            <value>
                <fullName>03 AM</fullName>
            </value>
            <value>
                <fullName>04 AM</fullName>
            </value>
            <value>
                <fullName>05 AM</fullName>
            </value>
            <value>
                <fullName>06 AM</fullName>
            </value>
            <value>
                <fullName>07 AM</fullName>
            </value>
            <value>
                <fullName>08 AM</fullName>
            </value>
            <value>
                <fullName>09 AM</fullName>
            </value>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 PM</fullName>
            </value>
            <value>
                <fullName>01 PM</fullName>
            </value>
            <value>
                <fullName>02 PM</fullName>
            </value>
            <value>
                <fullName>03 PM</fullName>
            </value>
            <value>
                <fullName>04 PM</fullName>
            </value>
            <value>
                <fullName>05 PM</fullName>
            </value>
            <value>
                <fullName>06 PM</fullName>
            </value>
            <value>
                <fullName>07 PM</fullName>
            </value>
            <value>
                <fullName>08 PM</fullName>
            </value>
            <value>
                <fullName>09 PM</fullName>
            </value>
            <value>
                <fullName>10 PM</fullName>
            </value>
            <value>
                <fullName>11 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>