force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Enable_Contact_Queue_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Enable_Contact_Queue_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used by &apos;ContactQueueTrigger&apos; to check for this new checkbox to be checked  &apos;Enable Contact Queue Trigger&apos;, and if its checked, else return from the trigger and do not proceed in trigger code</description>
    <label>Enable Contact Queue Trigger</label>
    <type>Checkbox</type>
</CustomField>