force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Enable_Tile_View__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Enable_Tile_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click here to switch Litmos to Tile View Version 2</description>
    <inlineHelpText>Click here to switch Litmos to Tile View Version 2</inlineHelpText>
    <label>Enable Tile View</label>
    <type>Checkbox</type>
</CustomField>