force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__enableCourseResultSummary__c.field-meta.xml
<CustomField>
    <fullName>Litmos__enableCourseResultSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableCourseResultSummary</label>
    <type>Checkbox</type>
</CustomField>