force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__enableLearningResultSummary__c.field-meta.xml
<CustomField>
    <fullName>Litmos__enableLearningResultSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableLearningResultSummary</label>
    <type>Checkbox</type>
</CustomField>