force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__hour__c.field-meta.xml
<CustomField>
    <fullName>Litmos__hour__c</fullName>
    <label>hour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>