force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Litmos_website_address__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Litmos_website_address__c</fullName>
    <label>Litmos website address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>