force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__MaxLearningpathAssignedForUser__c.field-meta.xml
<CustomField>
    <fullName>Litmos__MaxLearningpathAssignedForUser__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>MaxLearningpathAssignedForUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>