force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__MaxUserAssignedForLP__c.field-meta.xml
<CustomField>
    <fullName>Litmos__MaxUserAssignedForLP__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>MaxUserAssignedForLP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>