force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__OrgId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__OrgId__c</fullName>
    <label>OrgId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>