force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__PercentageCalculationFrequency__c.field-meta.xml
<CustomField>
    <fullName>Litmos__PercentageCalculationFrequency__c</fullName>
    <defaultValue>&quot;Hourly&quot;</defaultValue>
    <label>PercentageCalculationFrequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
                <default>true</default>
                <label>Hourly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>