force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__period__c.field-meta.xml
<CustomField>
    <fullName>Litmos__period__c</fullName>
    <label>period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>