force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Region__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Region__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>