force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Sync_Active__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Sync_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Active</label>
    <type>Checkbox</type>
</CustomField>