force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed - With Sync Errors</fullName>
            </value>
            <value>
                <fullName>Completed - Without Sync Errors</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>