force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__User_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__User_Name__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>