force-app/main/default/objects/Litmos__Configuration__c/fields/Litmos__Version__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Version__c</fullName>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>